# c2pa-ml

./: Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: asset_type.rs  base64.rs  error.rs  format.rs  gguf.rs  json.rs  lib.rs  manifest.rs  onnx.rs  python.rs  safetensors.rs  wasm.rs
