[package]
name = "c2pa-ml"
version = "0.1.0"
edition = "2021"
description = "C2PA manifest embedding for AI/ML model container formats: GGUF, SafeTensors, and ONNX"
license = "MIT OR Apache-2.0"
repository = "https://github.com/writerslogic/c2pa-ml"
keywords = ["c2pa", "provenance", "gguf", "safetensors", "onnx"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Python bindings (built with maturin/PyO3 for the PyPI distribution).
python = ["dep:pyo3"]

[dependencies]

# The PyPI distribution enables the `python` feature; native builds without it
# stay dependency-free.
pyo3 = { version = "0.23", optional = true, features = ["extension-module", "abi3-py39"] }

# The npm distribution is a `wasm32` build; native targets stay dependency-free.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
