[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "c2pa-ml"
description = "C2PA manifest embedding for AI/ML model container formats: GGUF, SafeTensors, and ONNX"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
keywords = ["c2pa", "provenance", "gguf", "safetensors", "onnx"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia",
    "Topic :: Security",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/writerslogic/c2pa-ml"

[tool.maturin]
features = ["python"]
module-name = "c2pa_ml"
